Repositioning start screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 .titleAndStart{   
     position: absolute;
     top: 70px;
-    right: 95px;
+    left: 315px;
     width: 950px;
     height: 200px;
 }
